--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,203 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Bangers', cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+
+.body-header {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 50px;
+}
+
+.nav-logo-container, .header-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-logo-container {
+  justify-content: space-between;
+}
+
+.header-section {
+  justify-content: space-around;
+  margin: 60px 0px;
+  padding-bottom: 20px;
+}
+
+#header-nav {
+  display: inline-flex;
+  width: 75%;
+  flex-direction: row;
+  margin: 40px 0px;
+  justify-content: space-between;
+}
+
+#header-nav a {
+	text-decoration: none;
+  color: lightgray;
+}
+
+.logo-container {
+  display: inline-flex;
+  width: 24%;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 30px 0px 30px 50px;
+}
+
+.logo {
+
+}
+
+.h1-button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 80px;
+  text-align: center;
+}
+
+.header-button {
+  border: 1px solid black;
+  font-size: 20px;
+  padding: 5px 40px;
+}
+
+.snippet-image-container {
+  display: flex;
+  flex-direction: row;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid black;
+  margin: 0px 50px 50px;
+  padding-top: 50px;
+}
+
+#footer {
+  border-top: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  margin: 0px 50px 50px;
+}
+
+.main-container-top, .main-container-middle, .main-container-bottom {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.features-text, .about-text {
+  width: 90%;
+}
+
+.main-container-middle {
+  justify-content: center;
+  margin: 50px 0px;
+}
+
+.main-container-bottom {
+
+}
+
+.section-features {
+  width: 50%;
+  padding: 0px 10px;
+}
+
+.section-about {
+  width: 49%;
+  padding: 0px 10px;
+}
+
+.middle-img {
+  width: 100%;
+}
+
+.section-services, .section-product, .section-vision {
+  width: 33%;
+  padding: 0px 20px;
+}
+
+.footer-header {
+  padding-top: 50px;
+}
+
+.copyright-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 60px 0px;
+}
+
+.copyright {
+
+}
 
