--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+
+@media (max-width: 1024px) {
+  
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -83,9 +86,7 @@ h1, h2, h3, h4, h5 {
 
 .header-section {
   justify-content: space-around;
-  justify-content: space-around;
   margin: 40px 45px 53px 154px;
-  padding-bottom: 20px;
   padding-bottom: 20px;
 }
 
@@ -209,3 +210,37 @@ h1 {
 
 }
 
+}
+
+
+@media (max-width: 800px) {
+  .nav-logo-container {
+    flex-direction: column;
+    align-items: center;
+    height: 120px;
+    justify-content: flex-end;
+  }
+
+  #header-nav {
+    order: 1;
+    width: 780px;
+    justify-content: space-around;
+  }
+
+  .snippet-image-container {
+    display: none;
+  }
+
+  .main-container-middle {
+    width: 760px;
+    height: 164px;
+  }
+
+  #footer {
+    margin: 20px 20px 0px 20px;
+  }
+
+  #main {
+    margin: 0px 20px 0px 20px;
+  }
+}
