--- a/css/index.css
+++ b/css/index.css
@@ -1,219 +1,220 @@
-
+/* These rules are for screen sizes that are 1024px or smaller */
 @media (max-width: 1024px) {
-  
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+    
+  /* http://meyerweb.com/eric/tools/css/reset/ 
+    v2.0 | 20110126
+    License: none (public domain)
+  */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  html, body, div, span, applet, object, iframe,
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+  a, abbr, acronym, address, big, cite, code,
+  del, dfn, em, img, ins, kbd, q, s, samp,
+  small, strike, strong, sub, sup, tt, var,
+  b, u, i, center,
+  dl, dt, dd, ol, ul, li,
+  fieldset, form, label, legend,
+  table, caption, tbody, tfoot, thead, tr, th, td,
+  article, aside, canvas, details, embed, 
+  figure, figcaption, footer, header, hgroup, 
+  menu, nav, output, ruby, section, summary,
+  time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+  }
+  /* HTML5 display-role reset for older browsers */
+  article, aside, details, figcaption, figure, 
+  footer, header, hgroup, menu, nav, section {
+    display: block;
+  }
+  body {
+    line-height: 1;
+  }
+  ol, ul {
+    list-style: none;
+  }
+  blockquote, q {
+    quotes: none;
+  }
+  blockquote:before, blockquote:after,
+  q:before, q:after {
+    content: '';
+    content: none;
+  }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+
+  /* Set every element's box-sizing to border-box */
+  * {
+    box-sizing: border-box;
+  }
+
+  html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+  }
+
+  h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+  }
+
+  /* Your code starts here! */
+
+  .body-header {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 50px;
+  }
+
+  .nav-logo-container, .header-section {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .nav-logo-container {
+    justify-content: space-between;
+    margin-top: 26px;
+  }
+
+  .header-section {
+    justify-content: space-around;
+    margin: 40px 45px 53px 154px;
+    padding-bottom: 20px;
+  }
+
+  #header-nav {
+    display: inline-flex;
+    width: 70%;
+    flex-direction: row;
+    margin: 40px 20px;
+    justify-content: space-between;
+  }
+
+  #header-nav a {
+    text-decoration: none;
+    color: lightgray;
+  }
+
+  .logo-container {
+    display: inline-flex;
+    width: 24%;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 30px 22px 30px 50px;
+  }
+
+  .logo {
+
+  }
+
+  .h1-button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  h1 {
+    font-size: 75px;
+    text-align: center;
+    margin: 2px 85px 17px 0px;
+  }
+
+  .header-button-container {
+    margin: 0px 65px 5px 0px;
+  }
+
+  .header-button {
+    border: 1px solid black;
+    font-size: 16px;
+    padding: 5px 41px;
+  }
+
+  .snippet-image-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #main {
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid black;
+    margin: 0px 70px 0px 70px;
+    padding: 39px 20px 0px 0px;
+  }
+
+  #footer {
+    border-top: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 70px 0px 70px;
+  }
+
+  .main-container-top, .main-container-middle, .main-container-bottom {
+    display: inline-flex;
+    flex-direction: row;
+  }
+
+  .features-text, .about-text {
+    width: 90%;
+  }
+
+  .main-container-middle {
+    justify-content: center;
+    margin: 38px 0px 30px 0px;
+  }
+
+  .main-container-bottom {
+    padding-bottom: 30px;
+  }
+
+  .section-features {
+    width: 50%;
+    padding: 0px 10px;
+  }
+
+  .section-about {
+    width: 49%;
+    padding: 0px 10px;
+  }
+
+  .middle-img {
+    width: 100%;
+  }
+
+  .section-services, .section-product, .section-vision {
+    width: 33%;
+    padding: 0px 20px;
+  }
+
+  .footer-header {
+    padding-top: 40px;
+  }
+
+  .copyright-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 40px 0px 50px;
+  }
+
+  .copyright {
+
+  }
+
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-  font-family: 'Titillium Web', sans-serif;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: 'Bangers', cursive;
-  letter-spacing: 1px;
-  margin-bottom: 15px;
-}
-
-/* Your code starts here! */
-
-.body-header {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 50px;
-}
-
-.nav-logo-container, .header-section {
-  display: flex;
-  flex-direction: row;
-}
-
-.nav-logo-container {
-  justify-content: space-between;
-  margin-top: 26px;
-}
-
-.header-section {
-  justify-content: space-around;
-  margin: 40px 45px 53px 154px;
-  padding-bottom: 20px;
-}
-
-#header-nav {
-  display: inline-flex;
-  width: 70%;
-  flex-direction: row;
-  margin: 40px 20px;
-  justify-content: space-between;
-}
-
-#header-nav a {
-	text-decoration: none;
-  color: lightgray;
-}
-
-.logo-container {
-  display: inline-flex;
-  width: 24%;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin: 30px 22px 30px 50px;
-}
-
-.logo {
-
-}
-
-.h1-button-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-h1 {
-  font-size: 75px;
-  text-align: center;
-  margin: 2px 85px 17px 0px;
-}
-
-.header-button-container {
-  margin: 0px 65px 5px 0px;
-}
-
-.header-button {
-  border: 1px solid black;
-  font-size: 16px;
-  padding: 5px 41px;
-}
-
-.snippet-image-container {
-  display: flex;
-  flex-direction: row;
-}
-
-#main {
-  display: flex;
-  flex-direction: column;
-  border-top: 1px solid black;
-  margin: 0px 70px 0px 70px;
-  padding: 39px 20px 0px 0px;
-}
-
-#footer {
-  border-top: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  margin: 0px 70px 0px 70px;
-}
-
-.main-container-top, .main-container-middle, .main-container-bottom {
-  display: inline-flex;
-  flex-direction: row;
-}
-
-.features-text, .about-text {
-  width: 90%;
-}
-
-.main-container-middle {
-  justify-content: center;
-  margin: 38px 0px 30px 0px;
-}
-
-.main-container-bottom {
-  padding-bottom: 30px;
-}
-
-.section-features {
-  width: 50%;
-  padding: 0px 10px;
-}
-
-.section-about {
-  width: 49%;
-  padding: 0px 10px;
-}
-
-.middle-img {
-  width: 100%;
-}
-
-.section-services, .section-product, .section-vision {
-  width: 33%;
-  padding: 0px 20px;
-}
-
-.footer-header {
-  padding-top: 40px;
-}
-
-.copyright-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 40px 0px 50px;
-}
-
-.copyright {
-
-}
-
-}
-
-
+/* These rules are for screen sizes that are 800px or smaller */
 @media (max-width: 800px) {
+
   .nav-logo-container {
     flex-direction: column;
     align-items: center;
@@ -242,5 +243,33 @@ h1 {
 
   #main {
     margin: 0px 20px 0px 20px;
+  }
+}
+
+/* These rules are for screen sizes that are 500px or smaller */
+@media (max-width: 500px) {
+
+  .nav-logo-container {
+
+  }
+
+  #header-nav {
+
+  }
+
+  .snippet-image-container {
+
+  }
+
+  .main-container-middle {
+
+  }
+
+  #footer {
+
+  }
+
+  #main {
+
   }
 }
