--- a/css/index.css
+++ b/css/index.css
@@ -251,27 +251,119 @@
 /* These rules are for screen sizes that are 500px or smaller */
 @media (max-width: 500px) {
 
-  .nav-logo-container {
+  body {
+    width: 500px;
+  }
 
+  .nav-logo-container {
+    height: 400px;
+    margin-bottom: 24px;
+    margin-top: 0px;
+  }
+
+  .logo-container {
+    width: 500px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0px 30px 100px 0px;
+    margin: 20px 0px 40px;
+  }
+
+  .logo {
+    padding-left: 30px;
   }
 
   #header-nav {
+    display: flex;
+    flex-direction: column;
+    height: 460px;
+    width: 500px;
+    margin-top: 0px;
+  }
 
+  #header-nav a {
+    color: black;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+  }
+
+  h1 {
+    margin-top: 30px;
+    margin-right: 100px;
+  }
+
+  .header-button {
+    margin-right: 40px;
   }
 
   .snippet-image-container {
 
   }
 
-  .main-container-middle {
+  .middle-img {
+    width: 460px;
+    height: 97px;
+    margin-left: 29px;
+    margin-right: auto;
+  }
 
+  .main-container-top {
+    display: inline-flex;
+    flex-direction: column;
+  }
+
+  .section-features, .section-about, .section-services, .section-product, .section-vision {
+    width: 465px;
+    margin-bottom: 57px;
+  }
+
+  .section-about {
+    margin-bottom: 22px;
+  }
+
+  .section-product {
+    margin-top: 10px;
+    margin-bottom: 75px;
+  }
+
+  .section-vision {
+    margin-bottom: 0px;
+  }
+
+  .main-container-middle {
+    width: 500px;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
+
+  .main-container-bottom {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
   }
 
   #footer {
+    margin-top: 15px;
+  }
 
+  .footer-header {
+    padding-top: 34px;
   }
 
   #main {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 55px;
   }
 }
