--- a/css/index.css
+++ b/css/index.css
@@ -209,13 +209,12 @@
     margin: 40px 0px 50px;
   }
 
-  .copyright {
-
-  }
-
-
 /* These rules are for screen sizes that are 800px or smaller */
 @media (max-width: 800px) {
+
+  body {
+    width: 800px;
+  }
 
   .nav-logo-container {
     flex-direction: column;
@@ -285,7 +284,7 @@
 
   #header-nav a {
     color: black;
-    border: 1px solid black;
+    border: 1px solid grey;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
